fix: a11y: card focus visible styles and aria label placeholders with additional code cleanup

--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -153,6 +153,25 @@
       }
     }
   }
+
+  // Hides the browser default keyboard focus-visible styles.
+  // Use the ConfigProvider instead.
+  &:focus-visible {
+    outline: none;
+  }
+}
+
+:global(.focus-visible) {
+  .card {
+    &.focus-visible,
+    &:focus-visible {
+      box-shadow: var(--focus-visible-box-shadow);
+
+      &.drop-shadow {
+        box-shadow: var(--focus-visible-box-shadow), $shadow-object-s;
+      }
+    }
+  }
 }
 
 @import './Styles/rtl';
